<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".registerActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Sign up"
      android:textSize="35dp"
      android:id="@+id/signup"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:layout_margin="50dp"
      android:gravity="center"/>

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:background="@drawable/edittext_bg"
      android:layout_below="@id/signup"
      android:drawableLeft="@drawable/ic_baseline_person_24"
      android:textColorHint="@color/white"
      android:textColor="@color/white"
      android:padding="20dp"
      android:drawablePadding="10dp"
      android:layout_margin="10dp"/>

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/username"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/edittext_bg"
      android:drawableLeft="@android:drawable/ic_lock_idle_lock"
      android:drawablePadding="10dp"
      android:hint="@string/password"
      android:inputType="numberPassword"
      android:padding="20dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white" />

  <EditText
      android:id="@+id/repassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/confirm_password"
      android:layout_marginTop="50dp"
      android:background="@drawable/edittext_bg"
      android:drawableLeft="@android:drawable/ic_lock_idle_lock"
      android:inputType="numberPassword"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:padding="20dp"
      android:drawablePadding="10dp"
      android:layout_margin="10dp"
      android:layout_below="@+id/password"/>

  <Button
      android:id="@+id/btnsignup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/repassword"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/button_bg"
      android:text="@string/register" />

  <LinearLayout
      android:id="@+id/social_icons2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:gravity="center">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="28dp"
        android:src="@drawable/google" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="28dp"
        android:src="@drawable/fb" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="28dp"
        android:src="@drawable/twitter" />
  </LinearLayout>

</RelativeLayout>